CV, ejercicios HTML y CSS completos. JS extra sin terminar

--- a/08-HTML/homework/cv.html
+++ b/08-HTML/homework/cv.html
@@ -8,7 +8,7 @@
         <header>
             <figure>
                 <div id='profilepic'> 
-                    <img src="./gatito.jpg" alt=" ">
+                    <img src="./Profile.jpg" alt=" ">
                 </div>
             </figure>
             <section>
@@ -43,7 +43,7 @@
                     <ul>
                         <li>Compartir tiempo de calidad con mi familia y amigos</li>
                         <li>Viajar, aprovecho cada oportunidad que se me presenta</li>
-                        <li>Gastronomía. Considero mucho la idea de formarme en sommelier por hobbie</li>
+                        <li>Cocinar. Considero mucho la idea de formarme en sommelier por hobbie</li>
                         <li>Aprender idiomas. Aspiro a ser políglota algún día</li>
                         <li>Escuchar audiolibros, podcasts, música</li>
                         <li>Me recreo en algunas apps móviles como Mobile Legends</li>
@@ -54,8 +54,9 @@
                 <section>
                     <h2>Descripción Personal</h2>
                     <p>Soy una persona con muchas ganas de crecer, evolucionar y progresar profesionalmente, 
-                        por lo cual busco un empleo que brinde un espacio propicio para tal fin. Intento cada día 
-                        aprender algo nuevo, soy detallista, organizada, siempre amable al trato y me adapto 
+                        por lo cual busco un empleo que brinde un espacio propicio para tal fin. <br> 
+                        Intento cada día 
+                        aprender algo nuevo. Soy detallista, organizada, siempre amable al trato y me adapto 
                         con facilidad. Dadas mi motivación y voluntad de trabajo, confío plenamente en mi 
                         capacidad de alinearme rápida y completamente con los objetivos propuestos.</p>
                 </section>
@@ -66,7 +67,7 @@
                         <h4>Punta Alta - años: 2012-2013-2016-2020</h4>
                         <p>He cuidado niños en el rango de edad de 3 meses hasta 8 años.
                             Alimentación, baños e higiene en general. Acompañamiento en tareas escolares,
-                            lecturas, paseos y gran variedad de actividades lúdicas y recreativas.
+                            lecturas, paseos y gran variedad <br> de actividades lúdicas y recreativas.
                         </p>
                     </article>
                     <article>
@@ -74,7 +75,7 @@
                         <h4>Punta Alta - años: 2014-2015-2019</h4>
                         <p> Año 2014 Atención, reposición y limpieza en Kiosco polirubro. <br>
                             Año 2015 Atención y ocasionalmente ayudante de cocina en Pizzería/Rotisería. <br>
-                            Año 2019 Ayudante de cocina para elaboración de alimentos a la venta en Panadería.  
+                            Año 2019 Ayudante de cocina para elaboración de alimentos a la venta en Panadería. <br>  
                             Eventualmente atención al público y servicio de catering para salón de eventos <br>
                             (correspondiente a la misma empresa).</p>
                             
@@ -92,7 +93,8 @@
                         <h4>Punta Alta - Intermitente desde que terminé el secundario hasta la actualidad.</h4>
                         <p>He impartido clases integrales a niños de primaria, <br>
                             clases de Matemáticas, Física, Dibujo Técnico e Inglés a alumnos de secundaria, <br>
-                            y clases de Análisis Matemático, Física y Sistemas de Representación a alumnos universitarios de 1er año.</p>
+                            y clases de Análisis Matemático, Física y Sistemas de Representación <br>
+                            a alumnos universitarios de 1er año.</p>
                     </article>
                 </section>
             </main>
@@ -107,13 +109,14 @@
                     Rápidamente comenzaron a surgir artículos, noticias, publicidades de cursos y demás, relacionados a la programación. <br>
                     Es ahí que descubrí que es una carrera muy interesante, multifacética y que su demanda laboral está en constante ascenso. 
                     Al mismo tiempo, también percibí que es un ámbito altamente competitivo y entendí que además de formarme, 
-                    necesito desarrollar un perfil profesional y adquirir experiencia. Es por esta razón que estoy aplicando para poder ser parte de Henry. <br>
-                    Veo en el programa una gran meta a corto plazo. Cuatro meses de curso intensivo, donde además de
-                    financiarte y enseñarte, te preparan para desenvolverte correctamente en las entrevistas laborales,
-                    es una oportunidad casi utópica y muy anhelada, al menos para mi.. <br>
-                    Por lo tanto, mi primer expectativa es superar esta etapa con éxito. Luego el plan es cursar 
+                    necesito desarrollar un perfil <br> profesional y adquirir experiencia. Es por esta razón que estoy aplicando para poder ser parte de Henry. <br>
+                    Encontrar un curso donde además de
+                    financiamiento y educación, haya una etapa de preparación para un óptimo desenvolvimiento en las entrevistas laborales,
+                    es una oportunidad casi utópica y muy anhelada para mi. 
+                    Por lo tanto, mi primer expectativa es superar esta etapa inicial. <br>
+                    Luego el plan es cursar 
                     la carrera con empeño, absorver y compartir el máximo de conocimientos posibles, para así al finalizar, 
-                    poder ver en mi misma un perfil apto y competente que me permita postularme con seguridad <br>
+                    poder encnotrar en mi misma un perfil apto y competente que me permita postularme con seguridad 
                     a empleos de mi interés y bien remunerados.</p>
              </section>
             </footer>
